# rusty-syringe

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
dynamiclibrary/: Cargo.toml
dynamiclibrary/src/: lib.rs
rusty-syringe/: Cargo.toml
rusty-syringe/src/: error.rs  lib.rs
